--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,19 @@
-adium-theme-ubuntu==0.3.4
-configparser==3.5.0
-Cython==0.25.2
-decorator==4.0.6
-enum34==1.1.6
-Faker==0.7.3
-flake8==3.2.1
-flake8-docstrings==1.0.2
-gevent==1.1.2
-greenlet==0.4.11
-ipaddress==1.0.17
-ipython==2.4.1
-mccabe==0.5.2
-pexpect==4.0.1
-ptyprocess==0.5
-py==1.4.31
-pycodestyle==2.2.0
-pydocstyle==1.1.1
-pyflakes==1.3.0
-pytest==3.0.5
-python-dateutil==2.6.0
+decorator==4.0.10
+PasteDeploy==1.5.2
+pexpect==4.2.1
+pickleshare==0.7.4
+pkg-resources==0.0.0
+prompt-toolkit==1.0.9
+ptyprocess==0.5.1
+Pygments==2.1.3
+pyramid==1.7.3
+repoze.lru==0.6
 simplegeneric==0.8.1
 six==1.10.0
-unity-lens-photos==1.0
+traitlets==4.3.1
+translationstring==1.3
+venusian==1.0
+wcwidth==0.1.7
+WebOb==1.6.3
+zope.deprecation==4.2.0
+zope.interface==4.3.3
